Added radium to project in Gallery.js and GalleryModal.js.

--- a/src/style/base/_global.scss
+++ b/src/style/base/_global.scss
@@ -7,10 +7,9 @@ html {
 }
 
 body {
-    font-family: 'Inconsolata', monospace;
     position: relative;
     font-size: 100%;
     background: #D1913C;
-    background: -webkit-link-linear-gradient(to right, #FFD194, #D1913C);
-    background: linear-gradient(to right, #FFD194, #D1913C);
+    background: -webkit-linear-gradient(to right, orange, #bdb76b);
+    background: linear-gradient(to right, orange, #bdb76b);
 }
