--- a/src/style/base/_global.scss
+++ b/src/style/base/_global.scss
@@ -1,15 +1,37 @@
+* {
+    padding: 0;
+    margin: 0;
+}
+
 *, *:before, *:after {
-    box-sizing: border-box;
+    box-sizing: inherit;
 }
 
 html {
     font-size: 16px;
+    box-sizing: border-box;
 }
 
 body {
     position: relative;
     font-size: 100%;
     background: #D1913C;
-    background: -webkit-linear-gradient(to right, orange, #bdb76b);
     background: linear-gradient(to right, orange, #bdb76b);
+}
+
+header {
+	z-index: 2;
+	margin: 0 auto 5%;
+    padding-bottom: 20px;
+	text-align: center;
+    position: relative;
+}
+
+footer {
+    height: 70px;
+    color: #c71585;
+    font-size: 24px;
+    font-family: 'Inconsolata', monospace;
+    padding-top: 10px;
+    text-align: center;
 }
