--- a/src/style/partials/_gallery.scss
+++ b/src/style/partials/_gallery.scss
@@ -28,13 +28,60 @@
     top: 0;
     bottom: 4px;
     left: 0;
-    right: 0;
-    background: rgba(34, 34, 34, 0.5);
-    display: block;
 }
 
-.gallery-grid div:hover:after,
-.gallery-grid div:hover:before {
-    opacity: 1;
-    transition: 0.3s opacity ease;
+// Modal-body animation
+
+.modal-body {
+    animation-name: zoom;
+    animation-duration: 1s;
+    transition: 1s height ease;
+}
+
+@keyframes zoom {
+    from {transform: scale(0)}
+    to {transform: scale(1)}
+}
+
+// Header text animation
+
+div.title {
+    margin: 0 auto;
+    width: 100%;
+    position: relative;
+    display: inline-block;
+    top: 0;
+    left: 0;
+    padding: 0;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: lighter;
+    font-size: 6.5vw;
+    font-family: 'Inconsolata', monospace;
+    letter-spacing: 0.1em;
+}
+div.title:before {
+    width: 100%;
+    font-size: 6.5vw;
+    padding: 0;
+    content: attr(data-text);
+    position: absolute;
+    overflow: hidden;
+    left: 50%;
+    transform: translateX(-50%);
+    white-space: nowrap;
+    width: 0;
+    color: #c71585;
+    animation: fill-orange 2.5s infinite;
+    font-family: 'Inconsolata', monospace;
+    font-weight: lighter;
+}
+
+@keyframes fill-orange {
+    0% {
+        width: 0;
+    }
+    100% {
+        width: 100%;
+    }
 }
